--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
   <depend>tf2_eigen</depend>
+  <depend>rosbag2_cpp</depend>
 
 
   <test_depend>ament_lint_auto</test_depend>
