--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>visualization_msgs</depend>
+  <depend>tf2_msgs</depend>
   <depend>PCL</depend>
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
