--- a/package.xml
+++ b/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>semantic_kitti_tools</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="yoshida0525shu@gmail.com">shuhei</maintainer>
-  <license>TODO: License declaration</license>
+  <description>ROS 2 utillity for semantic kitti dataset</description>
+  <maintainer email="yoshida0525shu@gmail.com">Shuhei-YOSHIDA</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
